@@ -322,8 +322,8 @@ default colors would be expressed as
 .nh
 \fBerror=01;31:warning=00;33:source=00;34:caret=01:token=01\fR.
 .hy
-If SYSTEMTAP_COLORS is absent or empty, the default colors will be used. If it
-is invalid, coloring is turned off.
+If SYSTEMTAP_COLORS is absent, the default colors will be used. If it is empty
+or invalid, coloring is turned off.
 
 .TP
 .BI \-\-disable\-cache
